--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,11 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-pie-chart": "^3.0.2",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
