--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-select-dropdown": "^4.0.0",
     "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
