--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-gifted-charts": "^1.4.9",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pie-chart": "^3.0.2",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.8.2",
