--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-gifted-charts": "^1.4.9",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modals": "^0.22.3",
     "react-native-pie-chart": "^3.0.2",
+    "react-native-popover-view": "^5.1.8",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
