--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DB_CONNECTION_STRING=mongodb+srv://tintranthanh:sherlockhomes17@cluster0.fnukyrv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_CONNECTION_STRING=
