--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,14 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.5",
     "expo": "~50.0.14",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^11.10.3",
+    "expo-localization": "^15.0.3",
+    "expo-splash-screen": "^0.27.4",
     "expo-status-bar": "~1.11.1",
+    "i18n-js": "^4.4.3",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
@@ -30,7 +34,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-select-dropdown": "^4.0.0",
-    "react-native-svg": "^15.1.0"
+    "react-native-svg": "^15.1.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
