--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "expo": "~50.0.14",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^11.10.3",
