--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-gifted-charts": "^1.4.9",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
     "react-native-modals": "^0.22.3",
     "react-native-pie-chart": "^3.0.2",
     "react-native-popover-view": "^5.1.8",
