--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,37 +4,41 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-community/datetimepicker": "^7.6.4",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-firebase/analytics": "^20.0.0",
+    "@react-native-firebase/app": "^20.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
-    "expo": "~50.0.14",
+    "expo": "^51.0.8",
     "expo-app-loading": "^2.1.1",
-    "expo-font": "^11.10.3",
+    "expo-dev-client": "^4.0.14",
+    "expo-font": "^12.0.5",
     "expo-localization": "^15.0.3",
     "expo-splash-screen": "^0.27.4",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.1",
     "i18n-js": "^4.4.3",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.9",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modals": "^0.22.3",
     "react-native-pie-chart": "^3.0.2",
     "react-native-popover-view": "^5.1.8",
     "react-native-progress": "^5.0.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^4.0.0",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "15.2.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
