--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,30 +4,28 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-firebase/analytics": "^20.0.0",
     "@react-native-firebase/app": "^20.0.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
-    "expo": "^51.0.8",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "expo": "^51.0.8",
     "expo-app-loading": "^2.1.1",
-    "expo-dev-client": "^4.0.14",
-    "expo-font": "^12.0.5",
-    "expo-localization": "^15.0.3",
-    "expo-splash-screen": "^0.27.4",
+    "expo-font": "~12.0.5",
+    "expo-localization": "~15.0.3",
+    "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.12.1",
     "i18n-js": "^4.4.3",
     "react": "18.2.0",
     "react-native": "0.74.1",
